--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.23",
+    "expo-blur": "~15.0.7",
     "expo-checkbox": "~5.0.7",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.17",
@@ -38,6 +39,7 @@
     "react-native-keyboard-controller": "^1.19.6",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-otp-entry": "^1.8.5",
+    "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
