Fixing eas and app json

--- a/app.json
+++ b/app.json
@@ -10,7 +10,10 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.honeysuckleco.honeysuckletrail"
+      "bundleIdentifier": "com.honeysuckleco.honeysuckletrail",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -45,6 +48,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "e4c1f648-284f-4d59-840f-6e4f706c2e60"
+      }
     }
   }
 }
